Fix match alignment

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -23,12 +23,25 @@
     display: inline-block;
 }
 
+.first-team-logo {
+    float: left;
+}
+
+.second-team-logo {
+    float: right;
+    vertical-align: middle;
+}
+
 .single-match-container {
     overflow: hidden;
     padding: 2px 0 7px 0;
-    border-bottom: 2px solid #272f35;
     vertical-align: middle;
+    border-bottom: 2px solid #272f35;
     text-align: center;
+}
+
+.single-match-container li:last-child {
+    border: none;
 }
 
 .last-match {
@@ -42,7 +55,7 @@
     font-size: 13px;
     display: inline-block;
     text-align: center;
-    width: 30%;
+    width: 18%;
 }
 
 .match-score {
@@ -107,12 +120,15 @@
 /* Portrait and Landscape */
 @media all and (max-width: 640px) {
     .logo-league {
-        width: 30px;
-        height: 30px;
+        width: 26px;
+        height: 26px;
+    }
+    .h5 {
+        font-size: 10px;
     }
     .logo-team {
-        width: 30px;
-        height: 30px;
+        width: 27px;
+        height: 27px;
     }
     .mobile-league-title {
         display: block;
@@ -121,14 +137,18 @@
         display: none;
     }
     .single-match-container  li {
-        font-size: 11px;
+        font-size: 8px;
         display: inline-block;
         text-align: center;
+        vertical-align: middle;
     }
     .match-score ul {
-        list-style: none;
-        display: table;
-        margin: 0 0 -12px 19px;
+         list-style: none;
+         display: table;
+         margin: 0 0 -7px -21px;
+     }
+    .match-score ul li {
+        font-size: 8px;
     }
 }
 
@@ -136,6 +156,6 @@
     .match-score ul {
         list-style: none;
         display: table;
-        margin: 0 0 -12px -8px;
+        margin: 0 0 -5px -35px;
     }
 }
